# libmq

./: .travis.yml  Makefile.am  configure.ac  connection.c  engine.c  libmq-engine.h  libmq.h  message.c  mq-recv.c  mq-send.c  p_libmq.h  plugin.c
debian/: .gitignore  control  libmq-dev.install  libmq.install  rules
queues/: Makefile.am  qpid-proton.c  random.c
